Fix overflow for touchinput on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,9 @@ table {
 /* end inported styles */
 
 html, body {
-	overflow: hidden
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
 }
 
 .sidebar {
